[package]
name = "quinn-plaintext"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]
readme = "README.md"
description = "Plaintext quinn cryptography (insecure)"
repository = "https://github.com/jeromegn/quinn-plaintext"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
quinn-proto = "0.10"
tracing = "0.1"
seahash = "4.1.0"

[dev-dependencies]
quinn = { version = "0.10", default-features = false, features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }